# ocaml-tdms

./: CONTRIBUTING.md  LICENSE  README.md  dune-project  tdms.opam
lib/: channel.ml  dune  file.ml  group.ml  object.ml  property.ml  raw_data_blocks.ml  segment.ml  tdms.ml  timestamp.ml  type.ml
test/: dune
